changes in cookie

--- a/a.html
+++ b/a.html
@@ -1,7 +1,6 @@
+<!doctype html>
 <html>
-	<body>
-		<h1>Hello World</h1>
-		<h3>in main</h3>
-	</body>
+       <body>
+             <h1>content in branch cookie</h1>
+       </body>
 </html>
-
